p2/confs/apps.yaml
---
# === APP 1 ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: traefik/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app-one
---
# === APP 2 (3 Replicas demandés ) ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: traefik/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app-two
---
# === APP 3 (Défaut) ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: traefik/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app-three
